assets/main.css
body{
    color : white ;
    font-family: 'dincherregular', Arial, sans-serif;
    font-style:normal;
    background-color: #9099a2;
    font-size : 5rem ;
    line-height; 0.5 ; 
}
h1{
    font-size : 13rem ;
    line-height: 0.5;
}
h5{
    font-size: 60px ;
}
p{
    line-height:1;
}
.fh{
  height: 100vh ;
}

.first{
  padding-top: 20vh ;
}
.second{
    padding-top:10vh;
}
ul{
  font-size: 50px ;
  list-style-type: none;
  margin: 0 ;
  padding: 0 ;
}
a{
  text-decoration: none ;
  color: white ;
}
p a:hover{
    text-decoration:underline ;
}
li{

  display: block ;
  float: left;
  padding : 1vh ;
}

.fa-instagram:hover{
  color : #517fa4 ;
}
.fa-twitter:hover{
  color : #55acee ;
}
.fa-github:hover{
  color : #333 ;
}
.fa-envelope:hover{
  color : #b23121 ;
}




@media (max-device-width: 900px) {
  
    body{
        font-size:8rem ;
        line-height:1 ;
    }
    h1{
        font-size:19rem ;
        line-height:1 ;
    }
    p{
        font-size:10rem ;
    }

  .first{
    padding-top: 0vh ;
  }
  .second{
    padding-top: 5vh ;
  }
}

